foxtrick.properties: modification of description about language change.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5410 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -668,7 +668,7 @@ foxtrick.balancedTrainer=%s trener koji je neutralan (ni defanzivan ni ofanzivan
 
 foxtrick.onpagepreferences=FoxTrick postavke
 foxtrick.modules_allpages=Moduli koji rade na svim stranicama
-HTLanguageChanged=U FoxTrick opcijama ste podesili da automatski promijenite jezička podešavanja kad god promijenite jezik koji koristite na Hattricku. Vaš jezik u Foxtricku je sada prebačen na:
+HTLanguageChanged=U FoxTrick opcijama ste podesili da automatski promijenite jezička podešavanja kad god promijenite jezik koji koristite na Hattricku. Vaš jezik u Foxtricku je sada prebačen na: %s.
 foxtrick.TwoWeekBalanceToogle=Klikni da promijeniš opcije za prikazivanje dvosedmične razlike.
 NewOrChangedModules=Sljedeći moduli su novi ili su promijenjeni u odnosu na FoxTrick verziju
 Screenshot=Screenshot s objašnjenjem funkcija modula
