--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -678,7 +678,7 @@ foxtrick.balancedTrainer=Un entrenador %s i neutre.
 
 foxtrick.onpagepreferences=Preferències de pàgines
 foxtrick.modules_allpages=Mòduls que s'executen a totes les pàgines
-HTLanguageChanged=Heu triat la selecció automàtica d'idioma a a les vostres preferències de FoxTrick. El vostre idioma és:
+HTLanguageChanged=Heu triat la selecció automàtica d'idioma a a les vostres preferències de FoxTrick. El vostre idioma és: %s.
 NewOrChangedModules=Els següents mòduls són nous o han canviat des de
 Screenshot=Captura de pantalla comentada de funcionalitats del mòdul
 PreferenceScreenshot=Captura de pantalla comentada de les preferències de FoxTrick
