--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -338,7 +338,7 @@ foxtrick.tweaks.Birthdays=Birthdays
 foxtrick.tweaks.BirthdayLastWeek=Birthdays last week
 foxtrick.tweaks.BirthdayNextWeek=Birthdays next week
 foxtrick.copymatchid=Click to copy matchID to clipboard
-HTLanguageChanged=You have set in Foxtrick main preferences to automatically adapt your foxtrick language. Your foxtrick language locale is now set to:
+HTLanguageChanged=You have set in Foxtrick main preferences to automatically adapt your foxtrick language. Your foxtrick language locale is now set to: %s.
 
 Coach=Coach
 
