--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -667,7 +667,7 @@ foxtrick.balancedTrainer=Seine Fähigkeit als Trainer ist %s. Außerdem ist er e
 
 foxtrick.onpagepreferences=FoxTrick Schnelleinstellungen
 foxtrick.modules_allpages=globale Module
-HTLanguageChanged=In den Grundeinstellungen ist eingestellt, dass die FoxTrick-Sprache automatisch angepasst wird, wenn die Sprache bei HT geändert wird. Deine FoxTrick-Sprache ist jetzt:
+HTLanguageChanged=In den Grundeinstellungen ist eingestellt, dass die FoxTrick-Sprache automatisch angepasst wird, wenn die Sprache bei HT geändert wird. Deine FoxTrick-Sprache ist jetzt: %s.
 NewOrChangedModules=Folgende Module sind neu, bzw. haben sich geändert seit
 Screenshot=Beschriftete Screenshots von Modul-Funktionen
 PreferenceScreenshot=Beschriftete Screenshots von FoxTrick-Einstellungen
