--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -507,7 +507,7 @@ foxtrick.copymatchid=Pulsa para copiar el ID del partido al portapapeles
 foxtrick.ExtendedPlayerDetails.perseason=/ temporada
 foxtrick.onpagepreferences=FoxTrick OnPagePrefs
 foxtrick.modules_allpages=Módulos que se ejecutan en todas las páginas
-HTLanguageChanged=Has seleccionado en las preferencias principale sde Foxtrick que el idioma de Foxtrick se actualice automáticamente cuando cambies el idioma en Hattrick. Tu nuevo idioma de Foxtrick es:
+HTLanguageChanged=Has seleccionado en las preferencias principale sde Foxtrick que el idioma de Foxtrick se actualice automáticamente cuando cambies el idioma en Hattrick. Tu nuevo idioma de Foxtrick es: %s.
 foxtrick.TwoWeekBalanceToogle=Pulsa para cambiar entre las opciones del balance de dos semanas
 NewOrChangedModules=Los siguientes módulos son nuevos o han cambiado desde
 Screenshot=Capturas de pantalla comentadas de las características del m´dulo
