--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -671,7 +671,7 @@ foxtrick.balancedTrainer=Un entrenador %s que no es ni ofensivo ni defensivo.
 
 foxtrick.onpagepreferences=Preferencias FoxTrick en la página
 foxtrick.modules_allpages=Módulos que se ejecutan en todas las páginas
-HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idioma de Foxtrick se adapte automáticamente cuando escojas otro idiona en HT. El idioma de Foxtrick es:
+HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idioma de Foxtrick se adapte automáticamente cuando escojas otro idiona en HT. El idioma de Foxtrick es: %s.
 NewOrChangedModules=Los siguientes módulos son nuevos o han cambiado desde
 Screenshot=Captura de pantalla de las caracteristicas del módulo
 PreferenceScreenshot=Captura de pantalla de las respectivas preferencias de Foxtrick
