--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -620,7 +620,7 @@ foxtrick.balancedTrainer=%s Valmentaja, joka ei ole hyökkäys eikä puolustus-m
 
 foxtrick.onpagepreferences=FoxTrick OnPagePrefs
 foxtrick.modules_allpages=Moduulit jotka toimii kaikilla sivuilla
-HTLanguageChanged=Olet asettanut Foxtrick-kielen automaattisen mukautumisen Foxtrickin pääasetuksissa. Paikallinen Foxtrick-kielesi on nyt:
+HTLanguageChanged=Olet asettanut Foxtrick-kielen automaattisen mukautumisen Foxtrickin pääasetuksissa. Paikallinen Foxtrick-kielesi on nyt: %s.
 NewOrChangedModules=Seuraavat moduulit ovat joko uusia tai niissä on muutoksia lähtien versiosta
 Screenshot=Kommentoitu kuvankaappaus moduulin ominaisuuksista
 PreferenceScreenshot=Kommentoitu kuvankaappaus Foxtrick -asetuksistasi
