--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -530,7 +530,7 @@ foxtrick.copymatchid=Click to copy matchID to clipboard
 foxtrick.ExtendedPlayerDetails.perseason=/season
 foxtrick.onpagepreferences=FoxTrick OnPagePrefs
 foxtrick.modules_allpages=Modules running on all pages
-HTLanguageChanged=You have set in FoxTrick's main preferences that FoxTrick's language is automatically adapted when you choose another language in HT. Your FoxTrick language locale is now set to:
+HTLanguageChanged=You have set in FoxTrick's main preferences that FoxTrick's language is automatically adapted when you choose another language in HT. Your FoxTrick language locale is now set to: %s.
 foxtrick.TwoWeekBalanceToogle=Click to toggle through TwoWeeksBalance options
 NewOrChangedModules=Following modules are new or have changed since
 Screenshot=Commented screenshot of module's features
