--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -699,7 +699,7 @@ foxtrick.balancedTrainer=%s neutralni trener.
 
 foxtrick.onpagepreferences=Foxtrickove opcije za pojedinu stranicu
 foxtrick.modules_allpages=Opcije koje rade na svim stranicama
-HTLanguageChanged=Podesili ste vaše Foxtrick postavke da se automatski prilagode vašem Hattrick jeziku. Vaš odabrani jezik za Foxtrick je sada podešen na:
+HTLanguageChanged=Podesili ste vaše Foxtrick postavke da se automatski prilagode vašem Hattrick jeziku. Vaš odabrani jezik za Foxtrick je sada podešen na: %s.
 foxtrick.TwoWeekBalanceToogle=Kliknuti za pregled opcija
 NewOrChangedModules=Sljedeće opcije su nove ili su dosad promijenjene
 Screenshot=Slikokaz s pomoćnim komentarima za pojedine opcije
