--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -664,7 +664,7 @@ foxtrick.balancedTrainer=Egy %s edző, aki nem támadó és nem védekező felfo
 
 foxtrick.onpagepreferences=FoxTrick-beállítások
 foxtrick.modules_allpages=Minden oldalon érvényes modulműködés
-HTLanguageChanged=A FoxTricked fő beállításai között az szerepel, hogy a FoxTricken beállított nyelv automatikusan módosuljon, ha más nyelvre váltasz a Hattrickben. A FoxTricked nyelve jelenleg a következő:
+HTLanguageChanged=A FoxTricked fő beállításai között az szerepel, hogy a FoxTricken beállított nyelv automatikusan módosuljon, ha más nyelvre váltasz a Hattrickben. A FoxTricked nyelve jelenleg a következő: %s.
 NewOrChangedModules=Az alábbi modulok vagy újak, vagy módosultak az alábbi időpont óta:
 Screenshot=Megjegyzéssel ellátott képernyőfotó a modulfunkciókról
 PreferenceScreenshot=Megjegyzéssel ellátott képernyőfotó a vonatkozó FoxTrick-beállításokról
