--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -693,7 +693,7 @@ foxtrick.balancedTrainer=Kowċ %s u ma jħobbx jattakka u lanqas jiddefendi.
 
 foxtrick.onpagepreferences=Preferenzi ta' Foxtrick
 foxtrick.modules_allpages=Moduli li qegħdin jaħdmu fuq din il-paġna
-HTLanguageChanged=Inti ssettjajt fuq il-preferenzi prinċipali ta' Foxtrick biex il-lingwa użata min Foxtrick tiġi awtomatikament aġġornata mal-lingwa li qiegħed tuża f'HT. Il-lingwa użata minn Foxtrick bħalissa hija:
+HTLanguageChanged=Inti ssettjajt fuq il-preferenzi prinċipali ta' Foxtrick biex il-lingwa użata min Foxtrick tiġi awtomatikament aġġornata mal-lingwa li qiegħed tuża f'HT. Il-lingwa użata minn Foxtrick bħalissa hija: %s.
 foxtrick.TwoWeekBalanceToogle=Agħfas biex tkun tista' taqleb u tara l-bilanċ fuq ġimgħatejn
 NewOrChangedModules=Il-moduli t'hawn taħt huma ġodda jew inkella ġew mibdula minn
 Screenshot=Stampa bil-kummenti tal-karatteristiċi tal-moduli
