--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -666,7 +666,7 @@ foxtrick.balancedTrainer=%s trener neutralny
 
 foxtrick.onpagepreferences=Opcje FoxTricka
 foxtrick.modules_allpages=Moduły aktywne na wszystkich stronach
-HTLanguageChanged=W opcjach Foxtricka włączyłeś wykrywanie zmian języka w Hattricku. W związku z tym, zmieniono język Foxtricka na:
+HTLanguageChanged=W opcjach Foxtricka włączyłeś wykrywanie zmian języka w Hattricku. W związku z tym, zmieniono język Foxtricka na: %s.
 NewOrChangedModules=Poniższe moduły zostały dodane bądź uległy zmianie w stosunku do wersji
 Screenshot=Zrzut ekranu modułu
 PreferenceScreenshot=Zrzut ekranu ustawień modułu
