--- a/content/locale/pt_BR/foxtrick.properties
+++ b/content/locale/pt_BR/foxtrick.properties
@@ -452,7 +452,7 @@ foxtrick.tweaks.BirthdayLastWeek=Aniversarios ultima semana
 foxtrick.tweaks.BirthdayNextWeek=Aniversarios proxima semana
 foxtrick.copymatchid=Click para copiar o ID do jogo para a area de tranferencia
 foxtrick.ExtendedPlayerDetails.perseason=/ season
-HTLanguageChanged=You have set in FoxTrick's main preferences that FoxTrick's language is automatically adapted when you choose another language in HT. Your FoxTrick language locale is now set to:
+HTLanguageChanged=You have set in FoxTrick's main preferences that FoxTrick's language is automatically adapted when you choose another language in HT. Your FoxTrick language locale is now set to: %s.
 foxtrick.TwoWeekBalanceToogle=Click to toggle through TwoWeeksBalance options
 NewOrChangedModules=Following modules are new or have changed since
 Screenshot=Commented screenshot of module's features
