--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -673,7 +673,7 @@ foxtrick.balancedTrainer=Un antrenor %s care nu este nici adept al atacului, nic
 
 foxtrick.onpagepreferences=Setari FoxTrick pe pagina curenta
 foxtrick.modules_allpages=Module care functioneaza pe toate paginile
-HTLanguageChanged=Ai setat in preferintele FoxTrick ca limba FoxTrick sa fie automat schimbata in aceeasi limba ca si limba HT.Limba foxtrick este:
+HTLanguageChanged=Ai setat in preferintele FoxTrick ca limba FoxTrick sa fie automat schimbata in aceeasi limba ca si limba HT.Limba foxtrick este: %s.
 NewOrChangedModules=Urmatoarele module sunt noi sau au fost schimbate(s-au schimbat) de
 Screenshot=Screenshot cu comentarii ale optiunilor modulelor
 PreferenceScreenshot=Screenshot cu comentarii al preferintelor FoxTrick
