--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -675,7 +675,7 @@ foxtrick.balancedTrainer=Тренер, предпочитающий баланс
 
 foxtrick.onpagepreferences=Настройки FoxTrick для страницы
 foxtrick.modules_allpages=Модули, выполняющиеся на всех страницах
-HTLanguageChanged=Вы выбрали в настройках Foxtrick автоматическое распознавание языка, когда Вы выбираете другой язык в Hattrick. Язык сообщений Foxtrick был изменён на:
+HTLanguageChanged=Вы выбрали в настройках Foxtrick автоматическое распознавание языка, когда Вы выбираете другой язык в Hattrick. Язык сообщений Foxtrick был изменён на: %s.
 NewOrChangedModules=Следующие модули появились или изменились со времени выхода версии
 Screenshot=Снимок экрана с демонстрацией работы модуля
 PreferenceScreenshot=Снимок экрана с соответствующим параметром Foxtrick (англ.)
