--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -691,7 +691,7 @@ foxtrick.balancedTrainer=%s  je neutrálny tréner.
 
 foxtrick.onpagepreferences=Foxtrick nastavenia
 foxtrick.modules_allpages=Moduly bežiace na všetkých stránkach
-HTLanguageChanged=Nastavil si v nastaveniach foxtricku aby sa jazyk foxtricku automaticky prisôsoboval zmenám jazyka na HT. Tvoj nový jazyk je:
+HTLanguageChanged=Nastavil si v nastaveniach foxtricku aby sa jazyk foxtricku automaticky prisôsoboval zmenám jazyka na HT. Tvoj nový jazyk je: %s.
 foxtrick.TwoWeekBalanceToogle=Klikni pre zapnutie cez TwoWeeksBalance možnosti
 NewOrChangedModules=Nasledujúce moduly sú nové alebo sa zmenili od
 Screenshot=Komentovaný screenshot vlastností modulu
