--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -681,7 +681,7 @@ foxtrick.balancedTrainer= %s тренер, нити нападачки нити 
 
 foxtrick.onpagepreferences=Фокстрик опције
 foxtrick.modules_allpages=Модули који раде на свим страницама
-HTLanguageChanged=У Фокстрик опцијама сте подесили да аутоматски промените језичка подешавања кад год промените језик који користите на Хаттрику. Ваш језик у Фокстрику је сада пребачен на:
+HTLanguageChanged=У Фокстрик опцијама сте подесили да аутоматски промените језичка подешавања кад год промените језик који користите на Хаттрику. Ваш језик у Фокстрику је сада пребачен на: %s.
 foxtrick.TwoWeekBalanceToogle=Кликни овде да промениш опције за приказивање двонедељне разлике.
 NewOrChangedModules=Следећи модули су нови или су промењени у односу на Фокстрик верзију
 Screenshot=Слика са објашњењима опција за модул
