--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -779,7 +779,7 @@ foxtrick.offensiveTrainer=En %s tränare som är offensiv.
 foxtrick.balancedTrainer=En %s tränare som är varken offensiv eller defensiv.
 foxtrick.onpagepreferences=FoxTrick Inställningar 'On-The-Fly'
 foxtrick.modules_allpages=Modules som körs på alla sidor
-HTLanguageChanged=Du har satt att ditt FoxTrick-språk automatiskt anpassas efter ditt HT-språk. Ditt FoxTrick-språk är nu satt till:
+HTLanguageChanged=Du har satt att ditt FoxTrick-språk automatiskt anpassas efter ditt HT-språk. Ditt FoxTrick-språk är nu satt till: %s.
 
 foxtrick.TwoWeekBalanceToogle=Klicka för att växla mellan Två-veckors-balans-alternativen
 NewOrChangedModules=Följande moduler är nya eller har ändrats sedan
