--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -447,7 +447,7 @@ foxtrick.tweaks.BirthdayLastWeek=Дні народження минулого т
 foxtrick.tweaks.BirthdayNextWeek=Дні народження на наступному тижні
 foxtrick.copymatchid=Натисніть, щоб копіювати ID матчу до буферу обміну
 foxtrick.ExtendedPlayerDetails.perseason=/ сезон
-HTLanguageChanged=Ви обрали опцію автоматичного розпізнавання зміни мови в HT у налаштуваннях FoxTrick. Мова FoxTrick змінена на:
+HTLanguageChanged=Ви обрали опцію автоматичного розпізнавання зміни мови в HT у налаштуваннях FoxTrick. Мова FoxTrick змінена на: %s.
 foxtrick.TwoWeekBalanceToogle=Натисніть, щоб змінити опцію показу двотижневого балансу
 NewOrChangedModules=Нові, або видозмінені модулі після версії
 Screenshot=Скріншот роботи модуля з коментарами
