--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -660,7 +660,7 @@ foxtrick.balancedTrainer= Một huấn luyện viên A %s trung lập
 
 foxtrick.onpagepreferences=FoxTrick tùy chọn trên trang
 foxtrick.modules_allpages=Hệ thống hoạt động trên tất cả các trang
-HTLanguageChanged=Bạn vừa thiết lập ở trang tùy chọn chính FoxTrick là ngôn ngữ của FoxTrick tự động thay đổi khi bạn thay đổi ngôn ngữ trong HT. Ngôn ngữ FoxTrick bây giờ được chuyển thành:
+HTLanguageChanged=Bạn vừa thiết lập ở trang tùy chọn chính FoxTrick là ngôn ngữ của FoxTrick tự động thay đổi khi bạn thay đổi ngôn ngữ trong HT. Ngôn ngữ FoxTrick bây giờ được chuyển thành: %s.
 NewOrChangedModules=Phần hệ thống này mới hoặc được thay đổi từ
 Screenshot=Ảnh chụp màn hình được bình luận về một tính năng của hệ thống
 PreferenceScreenshot=Ảnh chụp màn hình được bình luận về tùy chọn trong FoxTrick
