--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -679,7 +679,7 @@ foxtrick.balancedTrainer=一名既不侧重进攻, 也不侧重防守的%s教练
 
 foxtrick.onpagepreferences=FoxTrick 页面设置
 foxtrick.modules_allpages=在所有页面上运行的模块
-HTLanguageChanged=你在 FoxTrick 的首选项中设置了与 Hattrick 语言同步. FoxTrick 语言现在被设为:
+HTLanguageChanged=你在 FoxTrick 的首选项中设置了与 Hattrick 语言同步. FoxTrick 语言现在被设为: %s.
 NewOrChangedModules=以下模块是新模块或有更新
 Screenshot=模块特性截图
 PreferenceScreenshot=与 FoxTrick 首选项中各选项相对应的截图
