--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -339,7 +339,7 @@ foxtrick.tweaks.Birthdays=Birthdays
 foxtrick.tweaks.BirthdayLastWeek=Birthdays last week
 foxtrick.tweaks.BirthdayNextWeek=Birthdays next week
 foxtrick.copymatchid=Click to copy matchID to clipboard
-HTLanguageChanged=You have set in Foxtrick main preferences to automatically adapt your foxtrick language. Your foxtrick language locale is now set to:
+HTLanguageChanged=You have set in Foxtrick main preferences to automatically adapt your foxtrick language. Your foxtrick language locale is now set to: %s.
 Coach=Trener
 
 # NOTE TO TRANSLATORS
