--- a/content/locale/pt/foxtrick.properties
+++ b/content/locale/pt/foxtrick.properties
@@ -348,7 +348,7 @@ foxtrick.tweaks.Birthdays=Birthdays
 foxtrick.tweaks.BirthdayLastWeek=Birthdays last week
 foxtrick.tweaks.BirthdayNextWeek=Birthdays next week
 foxtrick.copymatchid=Click to copy matchID to clipboard
-HTLanguageChanged=You have set in FoxTrick's main preferences that FoxTrick's language is automatically adapted when you choose another language in HT. Your FoxTrick language locale is now set to:
+HTLanguageChanged=You have set in FoxTrick's main preferences that FoxTrick's language is automatically adapted when you choose another language in HT. Your FoxTrick language locale is now set to: %s.
 foxtrick.TwoWeekBalanceToogle=Click to toggle through TwoWeeksBalance options
 NewOrChangedModules=Following modules are new or have changed since
 Screenshot=Commented screenshot of module's features
