Romanian language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5422 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -331,7 +331,7 @@ foxtrick.SkillTable.OtherTeams.desc=Activeaza si pentru alte echipe
 foxtrick.HighlightCupwins.desc=Evidentiaza echipele castigatoare in meciurile din cupa pe pagina meciurilor de cupa
 foxtrick.HighlightCupwins.highlight_outsider.desc=Evidentiaza meciurile castiga de echipe cu rank mai mic
 foxtrick.SkillTranslation.desc=Adauga traducerea calitatilor in Engleza pe pagina de ajutor
-foxtrick.ReadHtPrefs.desc=Bifeaza pentru a schimba automat limba oricand schimbi limba din preferinte
+foxtrick.ReadHtPrefs.desc=Detecteaza automat limba
 foxtrick.ReadHtCountryCurrencyDateFormat.desc=Detecteaza automat tara, moneda si formatul datei (updatat dupa login)
 foxtrick.CurrentHtCountryCurrencyDateFormat.desc=Ultimele valori detectate:
 foxtrick.OnPagePrefs.desc=Arata o mica casuta jos in stanga sau dreapta lateral care permit schimbarea modulelor FoxTrick care ar putea strica afisarea paginii
@@ -673,7 +673,7 @@ foxtrick.balancedTrainer=Un antrenor %s care nu este nici adept al atacului, nic
 
 foxtrick.onpagepreferences=Setari FoxTrick pe pagina curenta
 foxtrick.modules_allpages=Module care functioneaza pe toate paginile
-HTLanguageChanged=Ai setat in preferintele FoxTrick ca limba FoxTrick sa fie automat schimbata in aceeasi limba ca si limba HT.Limba foxtrick este: %s.
+HTLanguageChanged=FoxTrick a detectat o schimbare a limbii. Limba FoxTrick este acum setata ca fiind %s.
 NewOrChangedModules=Urmatoarele module sunt noi sau au fost schimbate(s-au schimbat) de
 Screenshot=Screenshot cu comentarii ale optiunilor modulelor
 PreferenceScreenshot=Screenshot cu comentarii al preferintelor FoxTrick
@@ -918,7 +918,7 @@ foxtrick.prefs.disableTemporaryLabel=Dezactiveaza temporar
 
 foxtrick.prefs.buttonSave=Salveaza
 foxtrick.prefs.buttonCancel=Anuleaza
-foxtrick.prefs.buttonReset=Reseteaza
+foxtrick.prefs.buttonExample=Exemplu
 foxtrick.prefs.buttonCustomize=Modifica
 foxtrick.prefs.buttonCleanupBranch=Restaureaza implicite
 foxtrick.prefs.buttonDisableAll=Dezactiveaza toate
