[l10n] Catalan (ca) update.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5455 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -152,7 +152,7 @@ foxtrick.ForumNextAndPrevious.desc=Treu els botons «Següent» i «Anterior» d
 foxtrick.ForumLastPost.desc=Ves al darrer missatge en lloc d'anar al primer missatge dels fils llegits
 foxtrick.ForumLastPost.lastpage.desc=Ves a la darrera pàgina i no al darrer missatge
 foxtrick.MatchPlayerColouring.desc=Acoloreix els jugadors en el reportatge del partit en funció de quin és el seu equip. Quan s'empren enllaços a les pàgines de detalls dels jugadors, marca només aquest jugador
-foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separate own player coloring
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separa els colors dels jugadors propis
 foxtrick.MatchReportFormat.desc=Es mostra el reportatge línia per línia d'acord amb els esdeveniments del partit.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separa els colors de l'equip propi
 foxtrick.ForumRedirManagerToTeam.desc=Canvia els enllaços a la pàgina de l’usuari per la de l’equip en els enllaços dels fòrums
@@ -161,12 +161,12 @@ foxtrick.ManagerButtons.GuestBook.desc=Afegeix l’enllaç «Escriu al llibre de
 foxtrick.ManagerButtons.LargeSendMail.desc=Open the large mailbox instead of the small one
 foxtrick.HTThreadMarker.desc=Marca els fils creats pels HTs
 foxtrick.TeamStats.desc=Crea una vista prèvia dels jugadors de l'equip.
-foxtrick.TeamStats.General.desc=General information (TSI/age)
+foxtrick.TeamStats.General.desc=Informació general (TSI/edat)
 foxtrick.TeamStats.Speciality.desc=Especialitat
 foxtrick.TeamStats.Personality.desc=Personalitat
-foxtrick.TeamStats.Status.desc=Status (cards/injures)
+foxtrick.TeamStats.Status.desc=Estat (targetes/lesions)
 foxtrick.TeamStats.Current_league.desc=Lliga actual
-foxtrick.ExtraPlayerInfo.desc=Show extra information of players on players page.
+foxtrick.ExtraPlayerInfo.desc=Mostra informació addicional dels jugadors a les pàgines dels jugadors.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Mostra informació de l'entrenador anterior i actual.
 foxtrick.ExtraPlayerInfo.Flag.desc=Mostra les nacionalitats dels jugadors amb banderes.
 foxtrick.PlayerFilters.desc=Afegeix una caixa de selecció per filtrar jugadors a la pàgina dels jugadors.
@@ -176,7 +176,7 @@ foxtrick.GoToPostBox.desc=Afegeix un una caixa per anar al missatge X a la pàgi
 foxtrick.TeamSelectBox.desc=Substitueix la llista de jugadors per una de selecció en la pàgina dels jugadors. Al fer clic a la capçalera es canvia entre la llista i el quadre de selecció.
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Substitueix la llista de jugadors per una de selecció en la pàgina dels jugadors juvenils
 foxtrick.CopyPlayerAd.desc=Un botó a les pàgines dels jugadors per copiar els seus detalls (HT-ML).
-foxtrick.CopyPlayerAd.Sorted.desc=Sort the skills in descending order.
+foxtrick.CopyPlayerAd.Sorted.desc=Ordena les habilitats en ordre descendent.
 foxtrick.CustomMedals.desc=Substitueix las noves medalles de hattrick amb les de l’estil antic
 foxtrick.SeniorTeamShortCuts.desc=Afegeix els enllaços a l’entrenador i la darrera alineació al primer equip
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Mostra’l a pàgines d’altres equips
@@ -248,20 +248,20 @@ foxtrick.GoaldifferenceToTables.desc=Afegeix una nova columna amb la diferència
 foxtrick.CrossTable.desc=Afegeix una nova taula pels encreuaments, on tots els partits de lliga es mostren incloent una gràfica lineal de la posició a la lliga
 foxtrick.ElectionTable.desc=Afegeix el percentatge a la taula de les eleccions (només els vots mostrats es compten, no tots)
 foxtrick.ContextMenuCopy.desc=Options at the context menu for copying ID and/or link and content in HT-ML
-foxtrick.ContextMenuCopy.Id.desc=Option for copying ID
-foxtrick.ContextMenuCopy.Link.desc=Option for copying link location in HT-ML
-foxtrick.ContextMenuCopy.HtMl.desc=Option for copying selected content in HT-ML
-foxtrick.ContextMenuCopy.Table.desc=Option for copying table in HT-ML
+foxtrick.ContextMenuCopy.Id.desc=Opció per copiar IDs
+foxtrick.ContextMenuCopy.Link.desc=Opció per copiar enllaços en format HT-ML
+foxtrick.ContextMenuCopy.HtMl.desc=Opció per copiar textos seleccionat en format HT-ML
+foxtrick.ContextMenuCopy.Table.desc=Opció per copiar taules en format HT-ML
 foxtrick.NewMail.desc=Ressalta'l si reveu nou missatges
 foxtrick.NewMail.CustomColor.desc=Colors personalitzats pel nombre de nous correus. Potser que calgui reiniciar
 foxtrick.NewMail.HighlightNewMailIcon.desc=Remarca la icona de nou correus en vermell. Potser que calgui reiniciar
 foxtrick.NewMail.HighlightNewForum.desc=Destaca el nombre de missatges nous als fòrums al menú
 foxtrick.CopyTrainingReport.desc=Afegeix un botó per copiar l'informe d'entrenament a la pàgina d'entrenament del planter
-foxtrick.CopyTrainingReport.OpenHTYpage.desc=Open hattrick-youthclub.org in new tab after copying
+foxtrick.CopyTrainingReport.OpenHTYpage.desc=Obre en una nova pestanya hattrick-youthclub.org després de copiar
 foxtrick.CopyScoutReport.desc=Afegeix un botó per copiar el comentari del cercapromeses a la pàgina de visió general del planter
-foxtrick.CopyScoutReport.OpenHTYpage.desc=Open hattrick-youthclub.org in new tab after copying
+foxtrick.CopyScoutReport.OpenHTYpage.desc=Obre en una nova pestanya hattrick-youthclub.org després de copiar
 foxtrick.CopyPlayerSource.desc=Afegeix un botó per copiar el codi HTML (per emprar-lo amb hattrick-youthclub.org) a les pàgines de detalls dels jugadors del planter
-foxtrick.CopyPlayerSource.OpenHTYpage.desc=Open hattrick-youthclub.org in new tab after copying
+foxtrick.CopyPlayerSource.OpenHTYpage.desc=Obre en una nova pestanya hattrick-youthclub.org després de copiar
 foxtrick.PlayerBirthday.desc=Mostra els darrers i els següents aniversaris a la pàgina del llistat de jugadors
 foxtrick.MovePlayerSelectbox.desc=Mou la llista desplegable de jugadors a la part de dalt de la pàgina dels detalls dels jugadors
 foxtrick.SeasonStats.desc=Mostra algunes estadístiques a les pàgines dels arxius de partits
@@ -336,9 +336,8 @@ foxtrick.SkillTable.OtherTeams.desc=Habilita per altres equips
 foxtrick.HighlightCupwins.desc=Marca els equips guanyadors a la pàgina dels partits de copa
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
 foxtrick.SkillTranslation.desc=Afegeix la denominació anglesa de l'habilitat a les pàgines d'ajuda i denominacions
-foxtrick.ReadHtPrefs.desc=Canvia automàticament l'idioma si s'ha canviat l'idioma a les preferències de HT
-foxtrick.ReadHtCountryCurrencyDateFormat.desc=Automatically detect country, currency and date format
-foxtrick.CurrentHtCountryCurrencyDateFormat.desc=Last detected values:
+foxtrick.ReadHtPrefs.desc=Detecta el idioma automàticament
+foxtrick.ReadHtCountryCurrencyDateFormat.desc=Detecta el país, la moneda i el format de data automàticament
 foxtrick.OnPagePrefs.desc=Mostra una caixa lateral per les preferències dels mòduls executant-se en la pàgina.
 foxtrick.CountryList.desc=Modificacions de noms de països
 foxtrick.CountryList.SelectBoxes.desc=Substitueix els noms en anglès dels països de les caixes de selecció pels seus noms originals
@@ -357,7 +356,7 @@ foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=No mostris la finestra 
 foxtrick.LeagueAndMatchChat.desc=Afegeix un enllaç pel xat extern a la pàgina de la copa de la lliga i a les pàgines de federacions, també a les lligues, lligues de juvenils i partits, tant del primer equip com del planter (si no hi ha benvinguda és que el servidor està caigut).
 foxtrick.LeagueAndMatchChat.OpenYapletPopup.desc=Obre el xat Yapley en una nova finestra
 foxtrick.LeagueAndMatchChat.OpenYapletFrame.desc=Obre el xat Yapley a la pàgina de Hattrick
-foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Open Gabbly chat in new window
+foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Obre el xat Gabbly en una nova finestra
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Seleccioneu el vostre àlies pel xat
 foxtrick.RapidId.desc=Una caixa d'entrada a dalt de la pàgina útil per veure un equip, jugador, etc… per la seva Id
 foxtrick.ReadHtPrefsFromHeader.desc=Fixa automàticament els ajustaments de FoxTrick
@@ -369,7 +368,7 @@ foxtrick.LocalTime.DefaultLocal.desc=Mostra l'hora local per omissió
 foxtrick.ForumThreadAutoIgnore.desc=Automatically ignore forum topics with selected tags (topics with [Tag] or {Tag}).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma separated, case insensitive.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
-foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
+foxtrick.TableSort.desc=Fa que totes les taules correctes i que tinguin capçalera es puguin ordenar (incloent aquelles dels missatges dels fòrums)
 
 # -----------------------------------------------------------------------------
 
@@ -489,7 +488,7 @@ ForumSpecialBBCode.article=Afegeix un identificador d'article
 ForumSpecialBBCode.clock=Afegeix l'hora actual
 ForumSpecialBBCode.spoiler=Afegeix filtració «spoiler»
 ForumSpecialBBCode.pre=Afegeix etiqueta 'pre' (text de mida fixa)
-ForumSpecialBBCode.table=Insert 'table' format tags resp. convert selected text into a table (Lines are converted in rows. Text separated by "%s" will be converted into cells.)
+ForumSpecialBBCode.table=Afegeix amb el format de taula mitjançant etiquetes «table»; transforma el text seleccionat en una taula (les línies es transformen en files i el text separat per «%s» en celes).
 ForumSpecialBBCode.tableSeparator=Converteix a celes «%s»
 ForumSpecialBBCode.enterSeparator=Introdueix un separador personalitzat
 
@@ -678,7 +677,7 @@ foxtrick.balancedTrainer=Un entrenador %s i neutre.
 
 foxtrick.onpagepreferences=Preferències de pàgines
 foxtrick.modules_allpages=Mòduls que s'executen a totes les pàgines
-HTLanguageChanged=Heu triat la selecció automàtica d'idioma a a les vostres preferències de FoxTrick. El vostre idioma és: %s.
+HTLanguageChanged=FoxTrick a detectat un canvi d'idioma. S'ha fixat %s com l'idioma de Foxtrick.
 NewOrChangedModules=Els següents mòduls són nous o han canviat des de
 Screenshot=Captura de pantalla comentada de funcionalitats del mòdul
 PreferenceScreenshot=Captura de pantalla comentada de les preferències de FoxTrick
@@ -890,8 +889,6 @@ foxtrick.prefs.external_forum=Fòrum de FoxTrick
 foxtrick.prefs.hattrick_forum=Fòrum de FoxTrick (Hattrick)
 foxtrick.prefs.commented_screenshots=Captures de pantalla comentades
 foxtrick.prefs.hex_color_editor=Un editor hexadecimal de colors
-foxtrick.prefs.PrefDefaultWarningLabel=Defineix una advertència per defecte
-foxtrick.prefs.PrefDefaultWarningText=Comproveu la configuració d'idioma i moneda. Algunes de les funcionalitats de FoxTrick no funcionaran si aquestes opcions no són les correctes.
 foxtrick.prefs.basicPreferences=Preferències bàsiques
 foxtrick.prefs.captionHTLanguage=Idioma
 foxtrick.prefs.captionHTCurrency=Moneda
